src/objects/Remote_Validation__e.object
<CustomObject>
    <description>Platform event published when a Remote Validation (Order with a Smart Facility Remote Validation product) is purchased.</description>
    <fields>
        <fullName>EventType__c</fullName>
        <label>EventType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Remote Validation</label>
    <pluralLabel>Remote Validations</pluralLabel>
</CustomObject>